--- a/next-infinity/client/package.json
+++ b/next-infinity/client/package.json
@@ -15,6 +15,7 @@
     "@mui/icons-material": "^5.10.3",
     "@mui/material": "^5.10.5",
     "@mui/styles": "^5.10.3",
+    "axios": "^0.27.2",
     "next": "12.3.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
