--- a/next-infinity/client/package.json
+++ b/next-infinity/client/package.json
@@ -18,8 +18,10 @@
     "@reduxjs/toolkit": "^1.8.5",
     "axios": "^0.27.2",
     "next": "12.3.0",
+    "next-auth": "^4.12.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-redux": "^8.0.4",
     "swr": "^1.3.0"
   },
   "devDependencies": {
