--- a/next-infinity/server/package.json
+++ b/next-infinity/server/package.json
@@ -4,10 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
+    "apollo-server-express": "^3.10.1",
     "axios": "^0.27.2",
     "cors": "^2.8.5",
-    "express": "^4.18.1",
-    "apollo-server-express": "^3.10.1"
+    "express": "^4.18.1"
   },
   "scripts": {
     "start": "nodemon lib/index.js"
